discussion/kv_engine/157226/157226_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-47143: Add Rate Limited error codes

The following error codes was added to the system:

    RateLimitedNetworkIngress = 0x30,
    RateLimitedNetworkEgress = 0x31,
    RateLimitedMaxConnections = 0x32,
    RateLimitedMaxCommands = 0x33,

A new attribute is added to the error map (named "rate-limit")
to allow clients to "automatically" recognize new rate limits
when they are added to the system and perform "magic" related
to them (like trigger a callback for the user)

Given that not all clients support new attributes, the version
of the clustermap was bumped to two and in the spec for version
two clients _MUST_ ignore unknown attributes. The rest of the
layout is identical to version 1.

To avoid having to maintain two different formats on the server
we generate version 1 out of version 2 during startup. Clients
requesting version 2 must accept the server returning version 1.

Change-Id: I1fafa86dd8b85fc2f5474321637aaaf237ce1069

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-07-09 15:09:26.000000000
Message: 
Uploaded patch set 5.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-07-09 15:25:19.000000000
Message: 
Patch Set 5: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10437/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/error_map_manager_test.cc:33:49: error: no member named "mcbp" in namespace "cb" [clang-diagnostic-error]
        for (uint32_t ii = 0; ii < uint32_t(cb::mcbp::Status::COUNT); ++ii) {
                                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/error_map_manager_test.cc:34:37: error: no member named "mcbp" in namespace "cb" [clang-diagnostic-error]
            const auto status = cb::mcbp::Status(ii);
                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/error_map_manager_test.cc:35:21: error: no member named "mcbp" in namespace "cb" [clang-diagnostic-error]
            if (cb::mcbp::is_legal(status)) {
                    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10437/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/error_map_manager_test.cc:33:49:
error: no member named "mcbp" in namespace "cb" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10437/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/9076/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37561/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32037/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/47/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12012/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12171/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12516/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11095/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20063/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
